--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,7 +1,10 @@
 {
-  // These tasks will run in order when initializing your CodeSandbox project.
-  "setupTasks": [],
-
-  // These tasks can be run from CodeSandbox. Running one will open a log in the app.
-  "tasks": {}
+  "tasks": [
+    {
+      "name": "Metis GUI",
+      "command": "bash .codesandbox/start.sh",
+      "runAtStart": false,
+      "preview": { "port": 5000, "open": true }
+    }
+  ]
 }
